[package]
name = "api-service"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.4"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"]}
sq-logger = {path = "../common/logger"}
