[package]
name = "api-service"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.115"
warp = "0.2.4"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"]}
sq-logger = {path = "../common/logger"}
sq-shutdown = {path = "../common/shutdown"}
sq-engine = {path = "../engine"}
