[package]
name = "sq-engine"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
dyn-clonable = { version = "0.9.0" }
crossbeam-deque = "0.7.3"
priority-queue = "1.0.0"
hashbrown = "0.3"
linked-hash-map = "0.5.3"
sq-shutdown = {path = "../common/shutdown"}
sq-logger = {path = "../common/logger"}
