[package]
name = "sq-logger"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the sidequeue-logger crate.
[dependencies]
chrono = "0.4.13"
env_logger = { version = "0.7.1", default-features = false }
log = "0.4.11"
once_cell = "1.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
prometheus = { version = "0.9.0", default-features = false }

[features]