[package]
name = "sq-metrics"
version = "0.1.0"
authors = ["hsiung <vjoke@foxmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
hyper = "0.13.7"
sq-logger = { path = "../logger", version = "0.1.0" }
once_cell = "1.4.0"
prometheus = { version = "0.9.0", default-features = false }
serde_json = "1.0.57"
tokio = "0.2.22"

[dev-dependencies]
rusty-fork = "0.3.0"
assert_approx_eq = "1.1.0"
